--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 	<head>
 		<meta charset="utf-8">
 		<title>The Corner</title>
-		<link rel="stylesheet" type="text/css" href="index.css">
+		<link rel="stylesheet" type="text/css" href="./css/index.css">
 
 		<!--Icon-->
-		<link rel="icon" href="bcat.ico" type="image/x-icon">
+		<link rel="icon" href="./icons/bcat.ico" type="image/x-icon">
 		<!--BookmarkIcon-->
-		<link rel="shortcut icon" href="bcat.ico" type="image/x-icon">
+		<link rel="shortcut icon" href="./icons/bcat.ico" type="image/x-icon">
 
 	</head>
 	<body>
