--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 	</head>
 	<body>
 		<div class="main">
-        	<h1 align="center">The Corner</h1>
+        	<!--<h1 align="center" style="font-family:Times New Roman;">The Corner</h1>-->
+			<h1>The Corner</h1>
     	</div>
 	</body>
 </html>
