--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>The Corner</title>
 		<link rel="stylesheet" type="text/css" href="./css/index.css">
 
@@ -13,8 +14,9 @@
 	</head>
 	<body>
 		<div class="main">
-        	<!--<h1 align="center" style="font-family:Times New Roman;">The Corner</h1>-->
 			<h1>The Corner</h1>
+			<!-- <a href="https://eclipzr.github.io/math_index">Math</a> -->
+        	<!-- <a href="https://eclipzr.github.io/ro/">RO Lab</a> -->
     	</div>
 	</body>
 </html>
