--- a/lighttrace.html
+++ b/lighttrace.html
@@ -13,7 +13,7 @@
 	</head>
 	<body>
 		<div class="main">
-        	<h1 align="center"></h1>
+			<h1 align="left">Lighttrace-白主教 光痕</h1>
         	<p>
         		
         	</p>
@@ -23,7 +23,6 @@
 		<div>
 
 		</div>
-		<button>Change user</button>
 		
 		<script src="scripts/main.js"></script>
 	</body>
