--- a/lighttrace.html
+++ b/lighttrace.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Math</title>
+		<title>光痕Lighttrace</title>
 		<link rel="stylesheet" type="text/css" href="./css/math_index.css">
 
 		<!--Icon-->
